Enhance chat functionality and data source management; add new DTOs and update API integration. Introduce unified chat interface and improve error handling in data sources. Update UI components for better user experience.